--- a/STAT331_Final_Project-datadescription.qmd
+++ b/STAT331_Final_Project-datadescription.qmd
@@ -43,7 +43,7 @@ co2_pcap_cons <- read.csv(here::here("co2_pcap_cons.csv"))
 
 ## II. Methods
 
-### Data cleaning
+### a. Data cleaning
 
 After loading the necessary packages and reading in the two *Gapminder* files, both data sets were cleaned for ease of analysis. Each data set had its year variables re-designated as characters to standardize the variable type. The X’s in front of each year (carried over from *Gapminder*) were removed, and each year was then re-designated as a numeric type. Each data set was then pivoted into a long format so that each observation corresponded to a single country for a single year, along with their respective child_mortality and emissions values. These two data sets were named child_mort_long and co2_long.
 
@@ -92,7 +92,7 @@ final_data <- child_mort_long %>%
 
 ```
 
-### Exploratory Analysis
+### b. Exploratory analysis
 
 In order to get a sense of how these two variables relate over time, child_mortality and emissions (log transformed) for each country were averaged for each decade starting from the year 1953 through the year 2022. A new variable called Decade was created for this purpose. The resulting mean values are represented in the faceted plot below. Each point represents the mean values over a decade of `child_mortality` and `emissions` per capita for a single country. 
 
@@ -125,13 +125,23 @@ ggplot(final_data_means, aes(x = mean_emissions,
        y = "") +
   scale_x_log10() +
   theme_bw()
+
+# Un-logged
+ggplot(final_data_means, aes(x = mean_emissions,
+                             y = mean_child_mortality)) +
+  geom_point() +
+  facet_wrap(Decade ~ ., scales = "free") + 
+  labs(title = "Mean Child Mortality vs. Mean Emissions Over Decades (1953 - 2022)",
+       x = "Mean Emissions Per Capita (Log Transformed)",
+       y = "") +
+  theme_bw()
 ```
 
 Each facet in the above plot clearly shows that the global correlation between `child_mortality` and `emissions` is negative in every decade since 1953. This consistent pattern supports the hypothesis of an inverse relationship between these variables and provides a solid foundation for further analysis.
 
 ## III. Analysis
 
-### Linear Regression
+### a. Linear regression
 
 To evaluate the relationship between mean_child_mortality and mean_emissions, the final_data set was processed to compute yearly global averages for these variables, resulting in a dataset named yearly_means. Then, a scatterplot was generated, where each point represents the global averages for a given year. An overlaid line of best fit reveals a pronounced negative correlation, indicating that years with higher emissions are generally associated with lower child mortality rates, and vice versa.
 
@@ -178,9 +188,19 @@ yearly_means %>%
   scale_x_log10() +
   scale_color_viridis_d()
 
-```
-### Linear Model
+# Un-logged
+yearly_means %>%
+  mutate(period = 25 * floor((year - 1800) / 25) + 1800) %>%
+  ggplot(aes(x = mean_emissions, y = mean_child_mortality, color = as.factor(period))) +
+  geom_point() +
+  theme_bw() +
+  labs(x = "Mean Emissions (Log Transformed)", y = "Mean Child Mortality",
+       title = "Scatter Plot of Mean Child Mortality vs Mean Emissions by Period",
+       color = "Period") +
+  geom_smooth(method = "lm", color = "blue") +
+  scale_color_viridis_d()
 
+```
 To extract the linear equation from the above plot, a linear model was created with `mean_emissions` as the explanatory variable, and `mean_child_mortality` as the response variable. The resulting table shows the linear analysis.
 
 The regression equation for the model is $\hat{y}=403.29298−74.17116⋅x$, where $\hat{y}$ is equal to the estimated mean_child_mortality, and $x$ is equal to the mean_emissions.
@@ -194,19 +214,108 @@ tidy(final_data_lm)
 
 ```
 
-### Assessing appropriateness of fit
+### Test
+
+```{r}
+yearly_means_log <- yearly_means %>%
+  mutate(log_mean_emissions = log(mean_emissions))
+
+final_data_lm_log <- lm(mean_child_mortality ~ log_mean_emissions, data = yearly_means_log)
+```
+
+
+```{r}
+tidy(final_data_lm_log)
+```
+
+
+```{r}
+r_yearly_log <- yearly_means_log %>%
+  summarize(pearsons_r = cor(mean_child_mortality,
+                             log_mean_emissions, method = "pearson")) %>%
+  pull(pearsons_r)
+```
+
+
+```{r}
+final_data_lm_log %>%
+  augment() %>%
+  ggplot(aes(x = .resid)) +
+    geom_histogram(aes(y = ..density..), binwidth = 1, colour = "black", fill = "white") +
+    geom_density(alpha = .2, fill = "#FF6666") +
+    labs(x = "Residuals", y = "Density",
+         title = "Histogram of Residuals with Normal Density Curve") +
+    theme_bw()
+```
+
+```{r}
+final_data_lm_log %>%
+  augment() %>%
+  summarise(
+    response_variance = var(mean_child_mortality, na.rm = TRUE),
+    fitted_variance = var(.fitted, na.rm = TRUE),
+    residuals_variance = var(.resid, na.rm = TRUE)
+  ) %>%
+  pivot_longer(
+    everything(),
+    names_to = "Metric",
+    values_to = "Variance"
+  ) %>%
+  mutate(
+    Metric = recode(Metric,
+      'response_variance' = "Variance of Response",
+      'fitted_variance' = "Variance of Fitted Values",
+      'residuals_variance' = "Variance of Residuals"
+    )
+  )
+```
+
+```{r}
+fitted_values_log <- predict(final_data_lm_log)
+st_error_log <- sigma(final_data_lm_log)
+
+simulated_data_log <- data.frame(predicted = fitted_values_log) %>%
+  mutate(simulated_child_mortality = exp(predicted + rnorm(n(), mean = 0, sd = st_error_log)))
+
+ggplot(simulated_data_log, aes(x = predicted, y = simulated_child_mortality)) +
+  geom_point()
+```
+
+## End of Test
+
+
+### b. Assessing appropriateness of fit
 
 [text here]
 
 ```{r}
+r_yearly <- yearly_means %>%
+  summarize(pearsons_r = cor(mean_emissions,
+                             mean_child_mortality, method = "pearson"))
+
+
 
 glance(final_data_lm)
+```
 
 
+```{r}
 final_data_lm |> 
   augment() |> 
 ggplot(aes(x = .fitted, y = .resid)) +
   geom_point()
+
+# Histogram
+
+final_data_lm %>%
+  augment() %>%
+  ggplot(aes(x = .resid)) +
+    geom_histogram(aes(y = ..density..), binwidth = 1,
+                   colour = "black", fill = "white") +
+    geom_density(alpha = .2, fill = "#FF6666") +
+    labs(x = "Residuals", y = "",
+         title = "Histogram of Residuals with Normal Density Curve") +
+    theme_bw()
 
 ```
 
@@ -237,6 +346,7 @@ final_data_lm %>%
 
 ```
 
+
 ```{r}
 
 predictions <- predict(final_data_lm)
@@ -249,7 +359,7 @@ predictions %>%
     geom_point()
 ```
 
-## Simulation
+### c. Simulation
 
 ```{r results='hide', message=FALSE, warning=FALSE}
 noise <- function(x, mean = 0, sd) {
